# Typeinc

./: .gitignore  MANIFEST.in  README.md  input_config.py  keyboard.py  main.py  pyproject.toml  result.py  setup.py  text_gen.py  ui.py  wordlist.txt
configurations/: input_config.py  keyboard.py  mainscreen.py  result.py  text_gen.py  ui.py
docs/: standards_grading.md
docs/man/: typeinc.1
docs/tldr/: typeinc.md
scores/: highscore.py  scores.json
src/typeinc/: __init__.py  main.py
src/typeinc/configurations/: mainscreen.py  text_gen.py
src/typeinc/scores/: highscore.py  scores.json
typeinc/: main.py
typeinc/configurations/: input_config.py
