[project]
name = "Typeinc"
version = "1.0.1"
description = "Typeinc, an ncurses based tool, is your goto terminal tool to play around with your typing speed with various difficulty levels."
readme = "README.md"
authors = [
    { name = "AnirudhG07"}
]
requires-python = ">=3.11"
dependencies = [
    "setuptools>=75.3.0",
]
classifiers=[   
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows"

]
keywords=['terminal', 'typing speed test', 'typing', 'CLI']

[project.scripts]
typeinc = "typeinc:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
